ACS-4462 adjust ports